tests/ui/const-generics/issues/issue-71382.min.stderr
error: using function pointers as const generic parameters is forbidden
  --> $DIR/issue-71382.rs:16:23
   |
LL |     fn test<const FN: fn()>(&self) {
   |                       ^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`

error: aborting due to 1 previous error

